# growhub_

./: .gitignore  README.md  pyproject.toml
docs/: gateway_setup.md
firmware/: config.json  constants.py  main.py  secrets.example.py
firmware/lib/: ssl.py
firmware/lib/umqtt/: simple.py
firmware/lib/umqtt.simple-1.7.0.dist-info/: METADATA  RECORD
firmware/sensors/: climate_sensor.py  soil_sensor.py
firmware/src/: actuators.py  mqtt_manager.py  network_manager.py
firmware/src/sensors/: base.py  climate_sensor.py  sensor_classes.py  soil_sensor.py
gateway/: .env.example  docker-compose.yml  pretty_subscriber.py
gateway/mosquitto/config/: mosquitto.conf
growhub.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/firmware/sensors/: test_climate_sensor.py  test_soil_sensor.py
tests/firmware/src/: test_actuators.py
tests/firmware/src/sensors/: test_climate_sensor.py  test_soil_sensor.py
tests/hardware/: check_hardware.py  soil_calibration.py
tools/gateway/: mqtt.py
tools/hardware/: soil_calibration.py
